rest/rest-deployment.yaml
apiVersion: apps/v1
#
# Create a deployment ( https://kubernetes.io/docs/concepts/workloads/controllers/deployment/ )
#
kind: Deployment
metadata:
  name: rest-deployment
spec:
  replicas: 3
  # The .spec.selector field defines how the Deployment finds which Pods to manage.
  # In this case, you simply select a label that is defined in the Pod template (app: blog).
  # However, more sophisticated selection rules are possible,
  # as long as the Pod template itself satisfies the rule.
  selector:
    matchLabels:
      app: rest
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
      - name: rest
        image: cvarad/rest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 5000
